# AgenticAI-Workflow

./: .env.example  GET_STARTED.md  README.md  SETUP_GUIDE.md  TRUCK_BOOKING_GUIDE.md  config.py  main.py  mcp_server.py  quick_start.py  requirements.txt  setup.sh  simple_test.py  start_mcp_server.py  start_truck_booking.py  telegram_bot.py  test_truck_booking.py
.claude/: settings.local.json
amanfirstagent/: README.md  pyproject.toml
amanfirstagent/src/amanfirstagent/: crew.py  main.py  workflow_crew.py
amanfirstagent/src/amanfirstagent/config/: agents.yaml  config.py  tasks.yaml
amanfirstagent/src/amanfirstagent/tools/: workflow_tools.py
myenv/: pyvenv.cfg
myenv/Scripts/: activate  activate.bat  dumppdf.py  pdf2txt.py
utils/: logger.py  security.py
