[project]
name = "amanfirstagent"
version = "0.1.0"
description = "amanfirstagent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.148.0,<1.0.0"
]

[project.scripts]
amanfirstagent = "amanfirstagent.main:run"
run_crew = "amanfirstagent.main:run"
train = "amanfirstagent.main:train"
replay = "amanfirstagent.main:replay"
test = "amanfirstagent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
